BackUp/Container/Tester/rgeny_tester/logs/0002/vector/crash_reserve_max_size/result.err
srcs/vector/crash_test/reserve_max_size.cpp:22:5: error: no member named 'reserve' in 'ft::vector<int>'
                v.reserve(v.max_size());
                ~ ^
1 error generated.
make: *** [Makefile:62: objs/srcs/vector/crash_test/ft_reserve_max_size.o] Error 1
make: *** Waiting for unfinished jobs....
valgrind: ./exe/srcs/vector/crash_test/ft_crash_reserve_max_size: No such file or directory
